--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
+    "react": "19.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.1",
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
@@ -56,7 +56,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
