--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "json-server --watch db.json --delay 2000",
-    "start": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -51,6 +49,7 @@
     "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
+    "react-to-print": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
