--- a/package.json
+++ b/package.json
@@ -38,13 +38,18 @@
     "date-fns": "^3.6.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "nvm": "^0.0.4",
     "react": "19.1",
     "react-day-picker": "^9.6.7",
     "react-dom": "19.1",
     "react-hook-form": "^7.55.0",
+    "react-i18next": "^15.5.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.3",
