feat(all): add husky to project

--- a/package.json
+++ b/package.json
@@ -91,10 +91,13 @@
     "vite": "^6.2.0"
   },
   "lint-staged": {
-    "*.ts": [
+    "*.{ts,tsx}": [
       "npm run lint",
       "npm run format",
       "git add ."
+    ],
+    "*.{json,md}": [
+      "prettier --write"
     ]
   }
 }
