--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-to-print": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.3",
+    "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
