--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "server": "json-server --delay 1200 --watch db.json --port 3000",
     "lint": "eslint .",
     "format": "prettier . --write",
     "preview": "vite preview",
