--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "19.1",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^15.5.1",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
     "react-slick": "^0.30.3",
