--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.8.4",
+    "bun": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "concurrently": "^9.1.2",
