--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
+    "yet-another-react-lightbox": "^3.23.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
